fixed result-menu not showing up && fixed end game logic

--- a/static/styles.css
+++ b/static/styles.css
@@ -354,7 +354,7 @@ nav {
 }
 
 .pause-screen.active,
-.result-screen:active {
+.result-screen.active {
     display: flex;
 }
 
